--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,11 @@
 {
-  "name": "portal",
+  "name": "itd-elicensing",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "json3": "^3.3.0",
-    "es5-shim": "^4.0.0",
     "bootstrap": "^3.2.0",
     "angular-animate": "^1.3.0",
+    "angular-aria": "^1.3.0",
     "angular-cookies": "^1.3.0",
     "angular-messages": "^1.3.0",
     "angular-resource": "^1.3.0",
@@ -15,8 +14,8 @@
     "angular-touch": "^1.3.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.0",
-    "angular-scenario": "~1.3.0"
+    "angular-mocks": "^1.3.0"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "moduleName": "itdElicensingApp"
 }
